# SelfClean-Evaluation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: byol.yaml  cleaning_performance.yaml  dino.yaml  dino_only_cropping.yaml  evaluation.yaml  mae.yaml  metadata_comparison.yaml  simclr.yaml
configs/ablation_study/: simclr_multi_crop.yaml  simclr_multi_crop_no_aug.yaml
configs/data_configs/: dgx.yaml  local.yaml
src/: evaluate_cleaning_performance.py  evaluate_human_annotators.py  evaluate_metadata.py  evaluate_mixed_contamination.py  evaluate_synthetic.py
src/detectors/duplicates/: duplicate_base.py  phash.py  ssim.py
src/detectors/irrelevant_samples/: pyod_wrapper.py
src/detectors/label_errors/: confident_learning.py  fastdup.py  noise_rank.py
src/evaluator/: evaluator.py
src/perturbed_datasets/: artefact_augmentation_dataset.py  base_contamination_dataset.py  blur_augment_dataset.py  combined_dataset.py  helper.py  label_error_dataset.py  med_augment_dataset.py  mixed_augmentation_dataset.py
src/trainers/: evaluation_trainer.py  online_cleaning_mixin.py  selfclean_trainers.py
src/trainers/eval_types/: fine_tuning.py
src/utils/: utils.py  utils_pil.py
